--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
   "description": "backend for application Cheffie",
   "main": "app.js",
   "scripts": {
-    "start": "node backend/app.js",
-    "server": "nodemon backend/app.js",
+    "start": "node app.js",
+    "server": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
