--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.5.2"
+    "mongoose": "^6.5.2",
+    "nodemon": "^2.0.20"
   }
 }
